add about me html

--- a/index.html
+++ b/index.html
@@ -29,7 +29,30 @@
         </ul>
       </nav>
     </header>
-    <hero></hero>
+    <section id="about-me">
+      <div>
+        <h3>About</h3>
+        <h3>Me</h3>
+      </div>
+
+      <div>
+        <article>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit
+            dolorem quas temporibus assumenda nisi excepturi veniam. Repellat
+            eligendi provident ipsum quos delectus dolorem libero et repudiandae
+            ut vel. Dolorum, nesciunt!
+          </p>
+          <br />
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit
+            dolorem quas temporibus assumenda nisi excepturi veniam. Repellat
+            eligendi provident ipsum quos delectus dolorem libero et repudiandae
+            ut vel. Dolorum, nesciunt!
+          </p>
+        </article>
+      </div>
+    </section>
     <section></section>
     <footer></footer>
   </body>
