--- a/index.html
+++ b/index.html
@@ -53,7 +53,52 @@
         </article>
       </div>
     </section>
-    <section></section>
+    <section id="work">
+      <div class="work-title">
+        <h3>Work</h3>
+      </div>
+
+      <div class="work-links">
+        <div>
+          <img src="./assets/images/project-1.jpg" alt="" />
+          <div class="text">
+            <h4>Project 1</h4>
+            <p>Pro</p>
+          </div>
+        </div>
+        <div>
+          <img src="./assets/images/project-2.jpg" alt="" />
+          <div class="text">
+            <h4>Project 2</h4>
+            <p>Pro</p>
+          </div>
+        </div>
+        <div>
+          <img src="./assets/images/project-3.jpg" alt="" />
+          <div class="text">
+            <h4>Project 3</h4>
+            <p>Pro</p>
+          </div>
+        </div>
+        <div>
+          <img src="./assets/images/project-4.jpg" alt="" />
+          <div class="text">
+            <h4>Project 4</h4>
+            <p>Pro</p>
+          </div>
+        </div>
+        <div>
+          <img
+            src="./assets/images/run-buddy.jpg"
+            alt="Run Buddy, an online application that offers fitness services."
+          />
+          <div class="text">
+            <h4>Run Buddy</h4>
+            <p>HTML/CSS</p>
+          </div>
+        </div>
+      </div>
+    </section>
     <footer></footer>
   </body>
 </html>
