add footer hmtl

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
         </ul>
       </nav>
     </header>
+
     <section id="about-me">
       <div>
         <h3>About</h3>
@@ -53,6 +54,7 @@
         </article>
       </div>
     </section>
+
     <section id="work">
       <div class="work-title">
         <h3>Work</h3>
@@ -99,6 +101,12 @@
         </div>
       </div>
     </section>
-    <footer></footer>
+
+    <footer id="contact-me">
+      <h3>Contact Me</h3>
+      <a>919.280.7355</a>
+      <a href="mailto:tguy5837@gmail.com">tguy5837@gmail.com</a>
+      <a>Git Hub</a>
+    </footer>
   </body>
 </html>
