--- a/index.html
+++ b/index.html
@@ -6,28 +6,28 @@
   </head>
   <body>
     <header>
-      <div>
+      <div class="header-box">
         <h1>
           <a href="./index.html">Taylor Guy</a>
         </h1>
+
+        <nav>
+          <ul>
+            <li>
+              <a href="#about-me">About Me</a>
+            </li>
+            <li>
+              <a href="#work">Work</a>
+            </li>
+            <li>
+              <a href="#contact-me">Contact Me</a>
+            </li>
+            <li>
+              <a href="#resume">Resume</a>
+            </li>
+          </ul>
+        </nav>
       </div>
-      <!-- List -->
-      <nav>
-        <ul>
-          <li>
-            <a href="#about-me">About Me</a>
-          </li>
-          <li>
-            <a href="#work">Work</a>
-          </li>
-          <li>
-            <a href="#contact-me">Contact Me</a>
-          </li>
-          <li>
-            <a href="#resume">Resume</a>
-          </li>
-        </ul>
-      </nav>
     </header>
 
     <section id="about-me">
