styled about me

--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@
       </div>
     </header>
 
-    <section id="about-me">
+    <section id="about-me" class="about-me">
       <div>
         <h3>About</h3>
         <h3>Me</h3>
       </div>
 
-      <div>
+      <div class="about-me-text">
         <article>
           <p>
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit
