style work section

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </header>
 
     <section id="about-me" class="about-me">
-      <div>
+      <div class="about-me-title">
         <h3>About</h3>
         <h3>Me</h3>
       </div>
@@ -55,49 +55,53 @@
       </div>
     </section>
 
-    <section id="work">
+    <section id="work" class="work">
       <div class="work-title">
         <h3>Work</h3>
       </div>
 
       <div class="work-links">
-        <div>
-          <img src="./assets/images/project-1.jpg" alt="" />
-          <div class="text">
+        <div class="work-link">
+          <div class="work-text">
             <h4>Project 1</h4>
             <p>Pro</p>
           </div>
+          <img src="./assets/images/project-1.jpg" alt="" />
         </div>
-        <div>
-          <img src="./assets/images/project-2.jpg" alt="" />
-          <div class="text">
+
+        <div class="work-link">
+          <div class="work-text">
             <h4>Project 2</h4>
             <p>Pro</p>
           </div>
+          <img src="./assets/images/project-2.jpg" alt="" />
         </div>
-        <div>
-          <img src="./assets/images/project-3.jpg" alt="" />
-          <div class="text">
+
+        <div class="work-link">
+          <div class="work-text">
             <h4>Project 3</h4>
             <p>Pro</p>
           </div>
+          <img src="./assets/images/project-3.jpg" alt="" />
         </div>
-        <div>
-          <img src="./assets/images/project-4.jpg" alt="" />
-          <div class="text">
+
+        <div class="work-link">
+          <div class="work-text">
             <h4>Project 4</h4>
             <p>Pro</p>
           </div>
+          <img src="./assets/images/project-4.jpg" alt="" />
         </div>
-        <div>
+
+        <div class="work-link">
+          <div class="work-text">
+            <h4>Run Buddy</h4>
+            <p>HTML/CSS</p>
+          </div>
           <img
             src="./assets/images/run-buddy.jpg"
             alt="Run Buddy, an online application that offers fitness services."
           />
-          <div class="text">
-            <h4>Run Buddy</h4>
-            <p>HTML/CSS</p>
-          </div>
         </div>
       </div>
     </section>
