restyled work section for mobile and touched up header

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       </div>
 
       <div class="work-links">
-        <div class="work-link">
+        <div class="work-link hero-project">
           <div class="work-text">
             <h4>Project 1</h4>
             <p>Pro</p>
