additional css touches

--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
             eligendi provident ipsum quos delectus dolorem libero et repudiandae
             ut vel. Dolorum, nesciunt!
           </p>
+          <br />
         </article>
       </div>
     </section>
@@ -94,23 +95,30 @@
         </div>
 
         <div class="work-link">
-          <div class="work-text">
-            <h4>Run Buddy</h4>
-            <p>HTML/CSS</p>
-          </div>
-          <img
-            src="./assets/images/run-buddy.jpg"
-            alt="Run Buddy, an online application that offers fitness services."
-          />
+          <a href="https://tguy5837.github.io/run-buddy/" target="_blank">
+            <div class="work-text">
+              <h4>Run Buddy</h4>
+              <p>HTML/CSS</p>
+            </div>
+            <img
+              src="./assets/images/run-buddy.jpg"
+              alt="Run Buddy, an online application that offers fitness services."
+            />
+          </a>
         </div>
       </div>
     </section>
 
-    <footer id="contact-me">
-      <h3>Contact Me</h3>
-      <a>919.280.7355</a>
-      <a href="mailto:tguy5837@gmail.com">tguy5837@gmail.com</a>
-      <a>Git Hub</a>
+    <footer id="contact-me" class="contact-me">
+      <div class="contact-me-title">
+        <h3>Contact Me</h3>
+      </div>
+
+      <div class="contact-me-text">
+        <a>919.280.7355</a>
+        <a href="mailto:tguy5837@gmail.com">tguy5837@gmail.com</a>
+        <a>Git Hub</a>
+      </div>
     </footer>
   </body>
 </html>
