added meta tag for mobile responsiveness

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta content="width=device-width, initial-scale=1" name="viewport" />
     <link rel="stylesheet" href="./assets/css/style.css" />
   </head>
   <body>
@@ -117,7 +118,7 @@
       <div class="contact-me-text">
         <a>919.280.7355</a>
         <a href="mailto:tguy5837@gmail.com">tguy5837@gmail.com</a>
-        <a>Git Hub</a>
+        <a href="https://github.com/tguy5837">Git Hub</a>
       </div>
     </footer>
   </body>
