got media queries working

--- a/index.html
+++ b/index.html
@@ -64,35 +64,43 @@
 
       <div class="work-links">
         <div class="work-link hero-project">
-          <div class="work-text">
-            <h4>Project 1</h4>
-            <p>Pro</p>
-          </div>
-          <img src="./assets/images/project-1.jpg" alt="" />
+          <a href="https://tguy5837.github.io/run-buddy/" target="_blank">
+            <div class="work-text">
+              <h4>Project 1</h4>
+              <p>Pro</p>
+            </div>
+            <img src="./assets/images/project-1.jpg" alt="" />
+          </a>
         </div>
 
         <div class="work-link">
-          <div class="work-text">
-            <h4>Project 2</h4>
-            <p>Pro</p>
-          </div>
-          <img src="./assets/images/project-2.jpg" alt="" />
+          <a href="https://tguy5837.github.io/run-buddy/" target="_blank">
+            <div class="work-text">
+              <h4>Project 2</h4>
+              <p>Pro</p>
+            </div>
+            <img src="./assets/images/project-2.jpg" alt="" />
+          </a>
         </div>
 
         <div class="work-link">
-          <div class="work-text">
-            <h4>Project 3</h4>
-            <p>Pro</p>
-          </div>
-          <img src="./assets/images/project-3.jpg" alt="" />
+          <a href="https://tguy5837.github.io/run-buddy/" target="_blank">
+            <div class="work-text">
+              <h4>Project 3</h4>
+              <p>Pro</p>
+            </div>
+            <img src="./assets/images/project-3.jpg" alt="" />
+          </a>
         </div>
 
         <div class="work-link">
-          <div class="work-text">
-            <h4>Project 4</h4>
-            <p>Pro</p>
-          </div>
-          <img src="./assets/images/project-4.jpg" alt="" />
+          <a href="https://tguy5837.github.io/run-buddy/" target="_blank">
+            <div class="work-text">
+              <h4>Project 4</h4>
+              <p>Pro</p>
+            </div>
+            <img src="./assets/images/project-4.jpg" alt="" />
+          </a>
         </div>
 
         <div class="work-link">
