--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta content="width=device-width, initial-scale=1" name="viewport" />
+    <title>Taylor Guy | Hi there! 👋</title>
     <link rel="stylesheet" href="./assets/css/style.css" />
   </head>
   <body>
