--- a/index.html
+++ b/index.html
@@ -1,134 +1,135 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta content="width=device-width, initial-scale=1" name="viewport" />
-    <title>Taylor Guy | Hi there! 👋</title>
-    <link rel="stylesheet" href="./assets/css/style.css" />
-  </head>
-  <body>
-    <header>
-      <div class="header-box">
-        <h1>
-          <a href="./index.html">Taylor Guy</a>
-        </h1>
 
-        <nav>
-          <ul>
-            <li>
-              <a href="#about-me">About Me</a>
-            </li>
-            <li>
-              <a href="#work">Work</a>
-            </li>
-            <li>
-              <a href="#contact-me">Contact Me</a>
-            </li>
-            <li>
-              <a href="#resume">Resume</a>
-            </li>
-          </ul>
-        </nav>
-      </div>
-    </header>
+<head>
+  <meta charset="UTF-8" />
+  <meta content="width=device-width, initial-scale=1" name="viewport" />
+  <title>Taylor Guy | Hi there! 👋</title>
+  <link rel="stylesheet" href="./assets/css/style.css" />
+</head>
 
-    <section id="about-me" class="about-me">
-      <div class="about-me-title">
-        <h3>About</h3>
-        <h3>Me</h3>
-      </div>
+<body>
+  <header>
+    <div class="header-box">
+      <h1>
+        <a href="./index.html">Taylor Guy</a>
+      </h1>
 
-      <div class="about-me-text">
-        <article>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit
-            dolorem quas temporibus assumenda nisi excepturi veniam. Repellat
-            eligendi provident ipsum quos delectus dolorem libero et repudiandae
-            ut vel. Dolorum, nesciunt!
-          </p>
-          <br />
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit
-            dolorem quas temporibus assumenda nisi excepturi veniam. Repellat
-            eligendi provident ipsum quos delectus dolorem libero et repudiandae
-            ut vel. Dolorum, nesciunt!
-          </p>
-          <br />
-        </article>
-      </div>
-    </section>
+      <nav>
+        <ul>
+          <li>
+            <a href="#about-me">About Me</a>
+          </li>
+          <li>
+            <a href="#work">Work</a>
+          </li>
+          <li>
+            <a href="#contact-me">Contact Me</a>
+          </li>
+          <li>
+            <a href="#resume">Resume</a>
+          </li>
+        </ul>
+      </nav>
+    </div>
+  </header>
 
-    <section id="work" class="work">
-      <div class="work-title">
-        <h3>Work</h3>
-      </div>
+  <section id="about-me" class="about-me">
+    <div class="about-me-title">
+      <h3>About</h3>
+      <h3>Me</h3>
+    </div>
 
-      <div class="work-links">
-        <div class="work-link hero-project">
-          <a href="https://tguy5837.github.io/run-buddy/" target="_blank">
-            <div class="work-text">
-              <h4>Project 1</h4>
-              <p>Pro</p>
-            </div>
-            <img src="./assets/images/project-1.jpg" alt="" />
-          </a>
-        </div>
+    <div class="about-me-text">
+      <article>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit
+          dolorem quas temporibus assumenda nisi excepturi veniam. Repellat
+          eligendi provident ipsum quos delectus dolorem libero et repudiandae
+          ut vel. Dolorum, nesciunt!
+        </p>
+        <br />
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit
+          dolorem quas temporibus assumenda nisi excepturi veniam. Repellat
+          eligendi provident ipsum quos delectus dolorem libero et repudiandae
+          ut vel. Dolorum, nesciunt!
+        </p>
+        <br />
+      </article>
+    </div>
+  </section>
 
-        <div class="work-link">
-          <a href="https://tguy5837.github.io/run-buddy/" target="_blank">
-            <div class="work-text">
-              <h4>Project 2</h4>
-              <p>Pro</p>
-            </div>
-            <img src="./assets/images/project-2.jpg" alt="" />
-          </a>
-        </div>
+  <section id="work" class="work">
+    <div class="work-title">
+      <h3>Work</h3>
+    </div>
 
-        <div class="work-link">
-          <a href="https://tguy5837.github.io/run-buddy/" target="_blank">
-            <div class="work-text">
-              <h4>Project 3</h4>
-              <p>Pro</p>
-            </div>
-            <img src="./assets/images/project-3.jpg" alt="" />
-          </a>
-        </div>
-
-        <div class="work-link">
-          <a href="https://tguy5837.github.io/run-buddy/" target="_blank">
-            <div class="work-text">
-              <h4>Project 4</h4>
-              <p>Pro</p>
-            </div>
-            <img src="./assets/images/project-4.jpg" alt="" />
-          </a>
-        </div>
-
-        <div class="work-link">
-          <a href="https://tguy5837.github.io/run-buddy/" target="_blank">
-            <div class="work-text">
-              <h4>Run Buddy</h4>
-              <p>HTML/CSS</p>
-            </div>
-            <img
-              src="./assets/images/run-buddy.jpg"
-              alt="Run Buddy, an online application that offers fitness services."
-            />
-          </a>
-        </div>
-      </div>
-    </section>
-
-    <footer id="contact-me" class="contact-me">
-      <div class="contact-me-title">
-        <h3>Contact Me</h3>
+    <div class="work-links">
+      <div class="work-link hero-project">
+        <a href="https://annoyingdroid.github.io/FoodyTrack/" target="_blank">
+          <div class="work-text">
+            <h4>Project 1</h4>
+            <p>Pro</p>
+          </div>
+          <img src="./assets/images/FoodyTrackPic.png" alt="" />
+        </a>
       </div>
 
-      <div class="contact-me-text">
-        <a>919.280.7355</a>
-        <a href="mailto:tguy5837@gmail.com">tguy5837@gmail.com</a>
-        <a href="https://github.com/tguy5837">Git Hub</a>
+      <div class="work-link">
+        <a href="https://tguy5837.github.io/run-buddy/" target="_blank">
+          <div class="work-text">
+            <h4>Project 2</h4>
+            <p>Pro</p>
+          </div>
+          <img src="./assets/images/project-2.jpg" alt="" />
+        </a>
       </div>
-    </footer>
-  </body>
+
+      <div class="work-link">
+        <a href="https://tguy5837.github.io/run-buddy/" target="_blank">
+          <div class="work-text">
+            <h4>Project 3</h4>
+            <p>Pro</p>
+          </div>
+          <img src="./assets/images/project-3.jpg" alt="" />
+        </a>
+      </div>
+
+      <div class="work-link">
+        <a href="https://tguy5837.github.io/run-buddy/" target="_blank">
+          <div class="work-text">
+            <h4>Project 4</h4>
+            <p>Pro</p>
+          </div>
+          <img src="./assets/images/project-4.jpg" alt="" />
+        </a>
+      </div>
+
+      <div class="work-link">
+        <a href="https://tguy5837.github.io/run-buddy/" target="_blank">
+          <div class="work-text">
+            <h4>Run Buddy</h4>
+            <p>HTML/CSS</p>
+          </div>
+          <img src="./assets/images/run-buddy.jpg"
+            alt="Run Buddy, an online application that offers fitness services." />
+        </a>
+      </div>
+    </div>
+  </section>
+
+  <footer id="contact-me" class="contact-me">
+    <div class="contact-me-title">
+      <h3>Contact Me</h3>
+    </div>
+
+    <div class="contact-me-text">
+      <a>919.280.7355</a>
+      <a href="mailto:tguy5837@gmail.com">tguy5837@gmail.com</a>
+      <a href="https://github.com/tguy5837">Git Hub</a>
+    </div>
+  </footer>
+</body>
+
 </html>
