added Bohdes-Marketplace to portfolio (project 2)

--- a/index.html
+++ b/index.html
@@ -67,22 +67,22 @@
 
     <div class="work-links">
       <div class="work-link hero-project">
-        <a href="https://annoyingdroid.github.io/FoodyTrack/" target="_blank">
+        <a href="https://github.com/MadelineRamos/Bohde-Marketplace" target="_blank">
           <div class="work-text">
             <h4>Project 1</h4>
             <p>Pro</p>
           </div>
-          <img src="./assets/images/FoodyTrackPic.png" alt="" />
+          <img src="./assets/images/Bohdes-Marketplace-Pic.png" alt="" />
         </a>
       </div>
 
       <div class="work-link">
-        <a href="https://tguy5837.github.io/run-buddy/" target="_blank">
+        <a href="https://annoyingdroid.github.io/FoodyTrack/" target="_blank">
           <div class="work-text">
             <h4>Project 2</h4>
             <p>Pro</p>
           </div>
-          <img src="./assets/images/project-2.jpg" alt="" />
+          <img src="./assets/images/FoodyTrackPic.png" alt="" />
         </a>
       </div>
 
